--- a/index.html
+++ b/index.html
@@ -3,77 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Bootstrap Site</title>
+    <title>Workout Site</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-<!-- Accordion Component -->
+<!-- Accordion Component: Workout Tips -->
 <div class="container mt-5">
-    <h2>Accordion Example</h2>
+    <h2>Workout Tips</h2>
     <div class="accordion" id="accordionExample">
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Accordion Item #1
+                    Strength Training Tips
                 </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    This is the first item's accordion body.
+                    <ul>
+                        <li>Start with compound exercises (squats, deadlifts, bench press).</li>
+                        <li>Gradually increase weight to avoid injury.</li>
+                        <li>Ensure proper form to target muscles effectively.</li>
+                    </ul>
                 </div>
             </div>
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Accordion Item #2
+                    Cardio Tips
                 </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    This is the second item's accordion body.
+                    <ul>
+                        <li>Incorporate both steady-state and interval training.</li>
+                        <li>Track your heart rate to optimize fat burning.</li>
+                        <li>Start with 20-30 minutes of cardio and build from there.</li>
+                    </ul>
                 </div>
             </div>
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Accordion Item #3
+                    Nutrition Tips for Workouts
                 </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    This is the third item's accordion body.
+                    <ul>
+                        <li>Eat a balanced diet with proteins, carbs, and healthy fats.</li>
+                        <li>Stay hydrated before, during, and after workouts.</li>
+                        <li>Have a post-workout snack that includes protein to help muscle recovery.</li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<!-- Card Group Component -->
+<!-- Card Group Component: Workout Programs -->
 <div class="container mt-5">
-    <h2>Card Group Example</h2>
+    <h2>Popular Workout Programs</h2>
     <div class="card-group">
         <div class="card">
-            <img src="image1.jpg" class="card-img-top" alt="Image 1">
+            <img src="strength-training.jpg" class="card-img-top" alt="Strength Training">
             <div class="card-body">
-                <h5 class="card-title">Card Title 1</h5>
-                <p class="card-text">Description of the first card. Add some content here.</p>
+                <h5 class="card-title">Strength Training Program</h5>
+                <p class="card-text">Build muscle and increase strength with our strength training program. Includes weight lifting routines, sets, and reps.</p>
             </div>
         </div>
         <div class="card">
-            <img src="image2.jpg" class="card-img-top" alt="Image 2">
+            <img src="cardio-challenge.jpg" class="card-img-top" alt="Cardio Challenge">
             <div class="card-body">
-                <h5 class="card-title">Card Title 2</h5>
-                <p class="card-text">Description of the second card. Add more content here.</p>
+                <h5 class="card-title">Cardio Challenge</h5>
+                <p class="card-text">Get your heart pumping with this cardio challenge. Includes high-intensity interval training and steady-state sessions.</p>
             </div>
         </div>
         <div class="card">
-            <img src="image3.jpg" class="card-img-top" alt="Image 3">
+            <img src="yoga-program.jpg" class="card-img-top" alt="Yoga Program">
             <div class="card-body">
-                <h5 class="card-title">Card Title 3</h5>
-                <p class="card-text">Description of the third card. Here is some more text.</p>
+                <h5 class="card-title">Yoga and Flexibility</h5>
+                <p class="card-text">Improve flexibility, balance, and mindfulness with our yoga program. Perfect for all fitness levels.</p>
             </div>
         </div>
     </div>
@@ -82,3 +94,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
