--- a/index.html
+++ b/index.html
@@ -3,95 +3,140 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Workout Site</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Workout Tips</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        h2 {
+            margin: 20px 0;
+        }
+
+        /* Tabs Styling */
+        .tab {
+            cursor: pointer;
+            padding: 10px;
+            margin: 0;
+            border: none;
+            background-color: #f1f1f1;
+            font-weight: bold;
+        }
+
+        .tab.active {
+            background-color: #e2f0ff;
+        }
+
+        .tab-content {
+            display: none;
+            padding: 10px;
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+        }
+
+        .tab-content.active {
+            display: block;
+        }
+
+        /* Card Layout */
+        .card-container {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .card {
+            width: 300px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            overflow: hidden;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .card img {
+            width: 100%;
+            height: auto;
+        }
+
+        .card-content {
+            padding: 15px;
+        }
+
+        .card-content h3 {
+            margin: 0 0 10px;
+        }
+    </style>
 </head>
 <body>
-
-<!-- Accordion Component: Workout Tips -->
-<div class="container mt-5">
-    <h2>Workout Tips</h2>
-    <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Strength Training Tips
-                </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <ul>
-                        <li>Start with compound exercises (squats, deadlifts, bench press).</li>
-                        <li>Gradually increase weight to avoid injury.</li>
-                        <li>Ensure proper form to target muscles effectively.</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Cardio Tips
-                </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <ul>
-                        <li>Incorporate both steady-state and interval training.</li>
-                        <li>Track your heart rate to optimize fat burning.</li>
-                        <li>Start with 20-30 minutes of cardio and build from there.</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Nutrition Tips for Workouts
-                </button>
-            </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <ul>
-                        <li>Eat a balanced diet with proteins, carbs, and healthy fats.</li>
-                        <li>Stay hydrated before, during, and after workouts.</li>
-                        <li>Have a post-workout snack that includes protein to help muscle recovery.</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+    <h1>Workout Tips</h1>
+    <!-- Tabs -->
+    <div>
+        <button class="tab active" onclick="showTab('strength')">Strength Training Tips</button>
+        <button class="tab" onclick="showTab('cardio')">Cardio Tips</button>
+        <button class="tab" onclick="showTab('nutrition')">Nutrition Tips for Workouts</button>
     </div>
-</div>
 
-<!-- Card Group Component: Workout Programs -->
-<div class="container mt-5">
+    <div id="strength" class="tab-content active">
+        <ul>
+            <li>Start with compound exercises (squats, deadlifts, bench press).</li>
+            <li>Gradually increase weight to avoid injury.</li>
+            <li>Ensure proper form to target muscles effectively.</li>
+        </ul>
+    </div>
+    <div id="cardio" class="tab-content">
+        <p>Tips for improving cardiovascular endurance, heart health, and performance.</p>
+    </div>
+    <div id="nutrition" class="tab-content">
+        <p>Focus on high-protein meals, proper hydration, and balanced macros for better results.</p>
+    </div>
+
+    <!-- Workout Programs Cards -->
     <h2>Popular Workout Programs</h2>
-    <div class="card-group">
+    <div class="card-container">
         <div class="card">
-            <img src="strength-training.jpg" class="card-img-top" alt="Strength Training">
-            <div class="card-body">
-                <h5 class="card-title">Strength Training Program</h5>
-                <p class="card-text">Build muscle and increase strength with our strength training program. Includes weight lifting routines, sets, and reps.</p>
+            <img src="strength_training_image.jpg" alt="Strength Training">
+            <div class="card-content">
+                <h3>Ultimate Guide to Strength Training</h3>
+                <p>With detailed instructions and anatomical illustrations for 145 strength exercises.</p>
             </div>
         </div>
+
         <div class="card">
-            <img src="cardio-challenge.jpg" class="card-img-top" alt="Cardio Challenge">
-            <div class="card-body">
-                <h5 class="card-title">Cardio Challenge</h5>
-                <p class="card-text">Get your heart pumping with this cardio challenge. Includes high-intensity interval training and steady-state sessions.</p>
+            <img src="cardio_image.jpg" alt="Cardio Challenge">
+            <div class="card-content">
+                <h3>Cardio Challenge</h3>
+                <p>Get your heart pumping with this cardio challenge. Includes high-intensity interval training and steady-state sessions.</p>
             </div>
         </div>
+
         <div class="card">
-            <img src="yoga-program.jpg" class="card-img-top" alt="Yoga Program">
-            <div class="card-body">
-                <h5 class="card-title">Yoga and Flexibility</h5>
-                <p class="card-text">Improve flexibility, balance, and mindfulness with our yoga program. Perfect for all fitness levels.</p>
+            <img src="yoga_image.jpg" alt="Yoga Program">
+            <div class="card-content">
+                <h3>Yoga and Flexibility</h3>
+                <p>Improve flexibility, balance, and mindfulness with our yoga program. Perfect for all fitness levels.</p>
             </div>
         </div>
     </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function showTab(tabId) {
+            const contents = document.querySelectorAll('.tab-content');
+            const tabs = document.querySelectorAll('.tab');
+
+            contents.forEach(content => {
+                content.classList.remove('active');
+            });
+            tabs.forEach(tab => {
+                tab.classList.remove('active');
+            });
+
+            document.getElementById(tabId).classList.add('active');
+            event.currentTarget.classList.add('active');
+        }
+    </script>
 </body>
 </html>
+
 
