--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
 
         <div class="card">
-            <img src="cardio_image.jpg" alt="Cardio Challenge">
+            <img src="cardio-challenge.jpg" alt="Cardio Challenge">
             <div class="card-content">
                 <h3>Cardio Challenge</h3>
                 <p>Get your heart pumping with this cardio challenge. Includes high-intensity interval training and steady-state sessions.</p>
@@ -112,7 +112,7 @@
         </div>
 
         <div class="card">
-            <img src="yoga_image.jpg" alt="Yoga Program">
+            <img src="yoga-program.jpg" alt="Yoga Program">
             <div class="card-content">
                 <h3>Yoga and Flexibility</h3>
                 <p>Improve flexibility, balance, and mindfulness with our yoga program. Perfect for all fitness levels.</p>
