--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <h2>Popular Workout Programs</h2>
     <div class="card-container">
         <div class="card">
-            <img src="strength_training_image.jpg" alt="Strength Training">
+            <img src="cardio-workout.jpg" alt="Strength Training">
             <div class="card-content">
                 <h3>Ultimate Guide to Strength Training</h3>
                 <p>With detailed instructions and anatomical illustrations for 145 strength exercises.</p>
@@ -104,7 +104,7 @@
         </div>
 
         <div class="card">
-            <img src="cardio-challenge.jpg" alt="Cardio Challenge">
+            <img src="cardio-workout.jpg" alt="Cardio Challenge">
             <div class="card-content">
                 <h3>Cardio Challenge</h3>
                 <p>Get your heart pumping with this cardio challenge. Includes high-intensity interval training and steady-state sessions.</p>
@@ -112,7 +112,7 @@
         </div>
 
         <div class="card">
-            <img src="yoga-program.jpg" alt="Yoga Program">
+            <img src="yoga-flexibility.jpg" alt="Yoga Program">
             <div class="card-content">
                 <h3>Yoga and Flexibility</h3>
                 <p>Improve flexibility, balance, and mindfulness with our yoga program. Perfect for all fitness levels.</p>
