--- a/workout index.html
+++ b/workout index.html
@@ -75,14 +75,14 @@
             </div>
         </div>
         <div class="card">
-            <img src="cardio-challenge.jpg" class="card-img-top" alt="Cardio Challenge">
+            <img src="yoga-flexibility.jpg" class="card-img-top" alt="Cardio Challenge">
             <div class="card-body">
                 <h5 class="card-title">Cardio Challenge</h5>
                 <p class="card-text">Get your heart pumping with this cardio challenge. Includes high-intensity interval training and steady-state sessions.</p>
             </div>
         </div>
         <div class="card">
-            <img src="yoga-program.jpg" class="card-img-top" alt="Yoga Program">
+            <img src="yoga-flexibility.jpg" class="card-img-top" alt="Yoga Program">
             <div class="card-body">
                 <h5 class="card-title">Yoga and Flexibility</h5>
                 <p class="card-text">Improve flexibility, balance, and mindfulness with our yoga program. Perfect for all fitness levels.</p>
