--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <h2>Popular Workout Programs</h2>
     <div class="card-container">
         <div class="card">
-            <img src="cardio-workout.jpg" alt="Strength Training">
+            <img src="strength-training.jpg" alt="Strength Training">
             <div class="card-content">
                 <h3>Ultimate Guide to Strength Training</h3>
                 <p>With detailed instructions and anatomical illustrations for 145 strength exercises.</p>
