--- a/workout index.html
+++ b/workout index.html
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="yoga-flexibility.jpg" class="card-img-top" alt="Cardio Challenge">
+            <img src="cardio-workout.jpg" class="card-img-top" alt="Cardio Challenge">
             <div class="card-body">
                 <h5 class="card-title">Cardio Challenge</h5>
                 <p class="card-text">Get your heart pumping with this cardio challenge. Includes high-intensity interval training and steady-state sessions.</p>
